k8s-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80

        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "Pod: $POD_NAME | Env: $APP_ENV | User: $USERNAME" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
